# emerge

./: .credo.exs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  EMERGE_INTEGRATION.md  EMRG_FORMAT.md  EVENTS.md  NOTICE  PLAN.md  README.md  SCROLLBAR_CLEANUP_PLAN.md  SCROLLING.md  THIRD_PARTY_ASSETS.md  TREE_PATCHING.md  beam_macos_probe.exs  ci-tests.sh  demo.exs  macos.exs  macos_wrapper.exs  macos_wrapper_beam_child.exs  metal_probe.exs  mise.toml  mix.exs
.github/workflows/: build_release_artifacts.yml  ci.yml  dialyzer.yml  precompiled_nifs.yml  private_hex_release.yml  quality.yml
assets/demo_images/: SOURCES.md
bench/: README.md  engine_diff_bench.exs  generate_fixtures.exs  native_layout_bench.exs  native_patch_bench.exs  native_retained_layout_bench.exs  serialization_bench.exs
bench/fixtures/animation_rich_500/: event_attr.patch  full.emrg  insert_tail.patch  keyed_reorder.patch  manifest.json  nearby_slot_change.patch  text_content.patch
bench/fixtures/interactive_rich_500/: full.emrg  insert_tail.patch  keyed_reorder.patch  manifest.json  remove_tail.patch  text_content.patch
bench/support/: benchee_config.exs  native_helpers.exs  scenarios.exs
example/: README.md  mix.exs
example/config/: config.exs
example/lib/: emerge_demo.ex
example/test/: emerge_demo_test.exs
guides/internals/: architecture.md  assets-images.md  beam-performance-constraints.md  direct-listener-registry-architecture.md  emrg-format.md  event-registry-refactor-plan.md  events.md  feature-roadmap.md  macos-backend.md  nearby-semantics.md  scrolling.md  tree-patching.md  v2-test-migration-matrix.md
guides/tutorials/: describe_ui.md  set_up_viewport.md  state_management.md  use_assets.md
lib/: emerge.ex  emerge_skia.ex
lib/emerge/: attr_codec.ex  attr_schema.ex  attr_validation.ex  code_reloader.ex  color.ex  diff_state.ex  element.ex  engine.ex  patch.ex  reconcile.ex  serialization.ex  tree.ex  ui.ex  viewport.ex  vnode.ex
lib/emerge/assets/: config.ex  (+3 more)
lib/emerge_skia/: assets.ex  build_config.ex  checksum_metadata.ex  native.ex  options.ex  test_harness.ex  transport.ex  tree_renderer.ex  video_target.ex
native/emerge_skia/: Cargo.toml  Cross.toml
native/emerge_skia/benches/: emrg.rs  layout.rs  patch.rs  renderer.rs  stats.rs
native/emerge_skia/benches/support/: mod.rs
native/emerge_skia/src/: actors.rs  assets.rs  clipboard.rs  cursor.rs  debug_trace.rs  drm_input.rs  events.rs  input.rs  keys.rs  lib.rs  linux_wait.rs  native_log.rs  render_scene.rs  renderer.rs  services.rs  stats.rs  video.rs
native/emerge_skia/src/backend/: drm.rs  mod.rs  raster.rs  skia_gpu.rs  wake.rs  wayland.rs  wayland_config.rs  wayland_legacy.rs
native/emerge_skia/src/backend/drm/: cursor_theme.rs
native/emerge_skia/src/backend/drm/cursors/mocu_black_right/: LICENSE-CC0.txt  SOURCES.md
native/emerge_skia/src/backend/wayland/: egl.rs  geometry.rs  input.rs  keyboard.rs  mod.rs  present.rs  protocols.rs  runtime.rs  text_input.rs
native/emerge_skia/src/events/: dispatch_outcome.rs  registry.rs  registry_builder.rs  registry_v2.rs  runtime.rs  scrollbar.rs  test_support.rs  text_ops.rs
native/emerge_skia/src/fonts/: SOURCES.md
native/emerge_skia/src/runtime/: mod.rs  tree_actor.rs
native/emerge_skia/src/tree/: animation.rs  attrs.rs  deserialize.rs  element.rs  geometry.rs  interaction.rs  invalidation.rs  layout.rs  mod.rs  patch.rs  render.rs  render_lower.rs  scene.rs  scrollbar.rs  serialize.rs  text_layout.rs  transform.rs  viewport_culling.rs
native/emerge_skia/src/tree/layout/tests/: border_box.rs  cache.rs  common.rs  font.rs  measurement.rs  mod.rs  paragraph_flow.rs  resolve_core.rs  row_column.rs  scale.rs  scroll.rs
native/emerge_skia/src/tree/render/: box_model.rs  color.rs  paint.rs  scope.rs  text.rs
native/emerge_skia/src/tree/render/tests/: color.rs  common.rs  mod.rs  paint.rs  paragraph.rs  pipeline.rs  text.rs
plans/: 00-index.md  01-docs-and-tests-alignment.md  03-rust-runtime-boundary-split.md  04-refresh-pipeline-separation.md  README.md  active-frame-latency-plan.md  active-layout-affecting-animation-invalidation-plan.md  active-nearby-relayout-boundary-plan.md  active-performance-branch-fix-plan.md  active-performance-merge-readiness-plan.md  active-refresh-subtree-skipping-plan.md  active-relayout-dependency-boundaries-plan.md  active-release-code-bloat-reduction-plan.md  active-render-cache-children-plan.md  active-render-cache-plan.md  active-renderer-instrumentation-refactor-plan.md  active-scroll-viewport-culling-plan.md  active-text-flow-resolve-cache-plan.md  active-versioned-cache-keys-plan.md  caching-implementation-review.md  cross-engine-layout-caching-plan.md  drawing-optimization-investigation.md  frame-latency-implementation-notes.md  layout-caching-engine-insights.md  layout-caching-roadmap.md  native-tree-implementation-insights.md  node-identity-and-rust-tree-structure-plan.md  performance-improvements-branch-review.md  phase-4-nodeix-storage-plan.md  phase-5-nodeid-cleanup-plan.md  render-cache-flutter-comparison.md  rendering-cache-engine-investigation.md  taffy-layout-caching-insights.md
priv/demo_images/: SOURCES.md
priv/sample_assets/: SOURCES.md
priv/test_assets/: SOURCES.md
test/: emerge_skia_test.exs  emrg_roundtrip_test.exs  test_helper.exs  tree_test.exs
test/emerge/: assets_path_test.exs  attr_codec_test.exs  code_reloader_test.exs  color_test.exs  diff_state_test.exs  patch_test.exs  reconcile_test.exs  serialization_test.exs  ui_test.exs  viewport_test.exs
test/emerge_skia/: build_config_test.exs  checksum_metadata_test.exs  live_animation_hover_test.exs  options_test.exs
test/support/: animated_hit_case_helper.exs
(+152 files in other folders)
