[package]
name = "emerge_skia"
version = "0.1.0"
edition = "2024"

[lib]
name = "emerge_skia"
crate-type = ["cdylib"]

[features]
default = []
hover-trace = []

[dependencies]
rustler = "0.37"
winit = "0.30"
glutin = "0.32"
glutin-winit = "0.5"
smithay-client-toolkit = { version = "0.19", default-features = false, features = ["calloop", "xkbcommon"] }
wayland-client = "0.31"
wayland-backend = { version = "0.3", features = ["client_system", "rwh_06"] }
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
raw-window-handle = "0.6"
gl = "0.14"
drm = "0.14"
gbm = { version = "0.18", features = ["drm-support"] }
glutin_egl_sys = "0.7"
libloading = "0.8"
evdev = "0.12"
libc = "0.2"
crossbeam-channel = "0.5"
sha2 = "0.10"
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"] }
resvg = "0.47"

# Support both X11 and Wayland
skia-safe = { version = "0.91.1", default-features = false, features = ["x11", "wayland", "embed-freetype", "binary-cache"] }
