[package]
name = "emerge_skia"
version = "0.1.0"
edition = "2024"

[lib]
name = "emerge_skia"
crate-type = ["cdylib"]

[features]
default = ["wayland"]
hover-trace = []
wayland = [
    "dep:glutin",
    "dep:smithay-client-toolkit",
    "dep:wayland-client",
    "dep:wayland-backend",
    "dep:wayland-protocols",
    "dep:raw-window-handle",
    "dep:arboard",
    "skia-safe/wayland",
]
drm = ["dep:drm", "dep:gbm", "dep:evdev"]

[dependencies]
rustler = "0.37"
glutin = { version = "0.32", optional = true }
smithay-client-toolkit = { version = "0.20", default-features = false, features = ["calloop", "xkbcommon"], optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-backend = { version = "0.3", features = ["client_system", "rwh_06"], optional = true }
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"], optional = true }
raw-window-handle = { version = "0.6", optional = true }
gl = "0.14"
drm = { version = "0.14", optional = true }
gbm = { version = "0.18", default-features = false, features = ["drm-support", "import-egl"], optional = true }
glutin_egl_sys = "0.7"
libloading = "0.9"
evdev = { version = "0.13", optional = true }
libc = "0.2"
crossbeam-channel = "0.5"
sha2 = "0.10"
arboard = { version = "3.6", default-features = false, features = ["wayland-data-control"], optional = true }
resvg = "0.47"
skia-bindings = { version = "=0.93.1", default-features = false, features = ["jpeg"] }

skia-safe = { version = "0.93.1", default-features = false, features = ["gl", "pdf", "binary-cache"] }
